examples/invalid/missing_operand.mini
# Ошибка: отсутствует операнд после *
2+3*